<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/back"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <!-- Logo -->


    <!-- Login -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dip"
        android:text="@string/usuario"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:textColor="#ffffff" >
    </EditText>

    <!-- Senha -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/senha"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <!-- Botão de login -->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="login"
        android:text="@string/entrar"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/entrar_facebook"
        android:textColor="#fff" />

    <Button
        android:id="@+id/link_para_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="cadastro"
        android:text="@string/cadastro"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="recuperarSenha"
        android:layout_marginTop="15dp"
        android:text="@string/esqueceu_senha"
        android:textColor="#ffffff" />

</LinearLayout>